CSS (Sunset):  Fixed a z-index layering glitch, in preparation for search (as discussed in #31)

--- a/static/css/_app_sunset.scss
+++ b/static/css/_app_sunset.scss
@@ -132,6 +132,7 @@
 			color: $color_alink;
 			font-size: 12px;
 			font-weight: bold;
+			z-index:1;
 		}
 		
 		&:hover > .caption, &:active > .caption, &:focus > .caption {
